--- a/faculty_fighters.qsf
+++ b/faculty_fighters.qsf
@@ -595,4 +595,6 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -entity lab8 -section_
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -entity lab8 -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -entity lab8 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity lab8 -section_id Top
+set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
+set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
