--- a/faculty_fighters.qsf
+++ b/faculty_fighters.qsf
@@ -600,4 +600,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE player.sv
 set_global_assignment -name SYSTEMVERILOG_FILE npc.sv
 set_global_assignment -name SYSTEMVERILOG_FILE projectile.sv
 set_global_assignment -name SYSTEMVERILOG_FILE stage_control.sv
+set_global_assignment -name SYSTEMVERILOG_FILE hitbox.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
