--- a/faculty_fighters.qsf
+++ b/faculty_fighters.qsf
@@ -602,4 +602,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE projectile.sv
 set_global_assignment -name SYSTEMVERILOG_FILE stage_control.sv
 set_global_assignment -name SYSTEMVERILOG_FILE hitbox.sv
 set_global_assignment -name SYSTEMVERILOG_FILE font_rom.sv
+set_global_assignment -name SYSTEMVERILOG_FILE words.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
