--- a/faculty_fighters.qsf
+++ b/faculty_fighters.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE EP4CE115F29C7
 set_global_assignment -name TOP_LEVEL_ENTITY faculty_fighter_top_level
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 15.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:37:36  APRIL 14, 2018"
-set_global_assignment -name LAST_QUARTUS_VERSION 15.0.2
+set_global_assignment -name LAST_QUARTUS_VERSION 15.0.0
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -603,4 +603,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE stage_control.sv
 set_global_assignment -name SYSTEMVERILOG_FILE hitbox.sv
 set_global_assignment -name SYSTEMVERILOG_FILE font_rom.sv
 set_global_assignment -name SYSTEMVERILOG_FILE words.sv
+set_global_assignment -name SYSTEMVERILOG_FILE background_frameRAM.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
