--- a/faculty_fighters.qsf
+++ b/faculty_fighters.qsf
@@ -587,6 +587,8 @@ set_global_assignment -name PARTITION_COLOR 16764057 -entity lab8 -section_id To
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity lab8 -section_id Top
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
+set_global_assignment -name SYSTEMVERILOG_FILE box.sv
+set_global_assignment -name SYSTEMVERILOG_FILE health.sv
 set_global_assignment -name SDC_FILE sys_clk.sdc
 set_global_assignment -name QIP_FILE faculty_fighter_soc/synthesis/faculty_fighter_soc.qip
 set_global_assignment -name SYSTEMVERILOG_FILE VGA_controller.sv
