--- a/faculty_fighters.qsf
+++ b/faculty_fighters.qsf
@@ -607,4 +607,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE font_rom.sv
 set_global_assignment -name SYSTEMVERILOG_FILE words.sv
 set_global_assignment -name SYSTEMVERILOG_FILE background_frameRAM.sv
 set_global_assignment -name SYSTEMVERILOG_FILE char_frameRAM.sv
+set_global_assignment -name SYSTEMVERILOG_FILE hit_once_control.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
